--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="nav-links">
             <a href="#">Save More on App</a>
-            <a href="#">Become a Seller</a>
+            <a href="becomeaseller.html">Become a Seller</a>
             <a href="#">Help & Support</a>
         </div>
     </header>
