--- a/becomeaseller.html
+++ b/becomeaseller.html
@@ -1,63 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daraz Seller Login</title>
-    <link rel="stylesheet" href="styles1.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Become a Seller - Daraz</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="Screenshot 2025-07-16 130221.png" alt="Daraz Logo">
-        </div>
-        <div class="select country">
-                <select name="country" id="country">
-                  <option value="volvo">Bangladesh</option>
-                  <option value="saab">Pakistan</option>
-                  <option value="opel">Sri Lanka</option>
-                  <option value="audi">Nepal</option>
-                </select>
-              </form>
-        </div>
-        <div class="select language">
-            <select name="language" id="language">
-              <option value="volvo">English</option>
-              <option value="saab">Bangali</option>
-            </select>
-          </form>
-    </div>
-    </header>
+  <!-- Header Section -->
+  <header class="header-wrapper">
     <div class="container">
-        <div class="login-box">
-            <h2>Login with Password</h2>
-            <form id="login-form">
-                <div class="input-group">
-                    <input type="text" id="username" name="username" placeholder="Mobile Number/Email" required>
-                </div>
-                <div class="input-group">
-                    <input type="password" id="password" name="password" placeholder="Password" required>
-                </div>
-                <div class="input-group">
-                    <button type="submit" class="login-btn">Login</button>
-                </div>
-                <div class="link">
-                <div class="forgot-password">
-                    <a href="#">Reset Password?</a>
-                </div>
-                <div class="forgot-password">
-                    <a href="#">Register as global seller</a>
-                </div>
-                <div class="forgot-password">
-                    <a href="#">Don't have an account yet?  
-                        Create a new account</a>
-                </div>
-                </div>
-                
-            </form>
-        </div>
+      <div class="nav-logo">
+        <svg width="30" height="30" viewBox="0 0 24 24" fill="#fff">
+          <path d="M3 3L12 9L21 3V21L12 15L3 21V3Z"/>
+        </svg>
+        <span>Daraz Seller Center</span>
+      </div>
+      <div class="lang-select">
+        <span class="flag">🇧🇩</span> Bangladesh ▼
+        <span class="language">English ▼</span>
+      </div>
     </div>
+  </header>
 
-    <script src="script1.js"></script>
+  <!-- Main Content Section -->
+  <main class="become-seller-container">
+    <div class="become-seller-content">
+      <!-- Left Side -->
+      <section class="left-side-become-seller">
+        <h1>Start Selling on Daraz Now!</h1>
+        <p>Join our marketplace today and expand your business to millions of customers.</p>
+        <div class="shopping-cart-illustration">
+          <div class="shopping-cart"></div>
+          <div class="bag bag1"></div>
+          <div class="bag bag2"></div>
+          <div class="location-pin"></div>
+        </div>
+      </section>
+
+      <!-- Right Side: Login Form -->
+      <section class="right-side-become-seller">
+        <h3>Login to Your Seller Account</h3>
+        <form id="loginForm">
+          <input type="text" id="username" name="username" placeholder="Mobile Number or Email" required />
+          <div class="password-wrapper">
+            <input type="password" id="password" name="password" placeholder="Password" required />
+          </div>
+          <button type="submit" class="btn-login">Login</button>
+        </form>
+        <p class="terms-text">
+          By clicking Login, you agree to these <a href="#">Terms & Conditions</a> and <a href="#">Privacy Policy</a>.
+        </p>
+        <p class="links">
+          <a href="#">Forgot password?</a><br />
+          <a href="global-seller.html">Register as a Seller</a>
+        </p>
+        <p class="create-account">
+          Don’t have an account yet? <a href="#" class="create-new">Create a new account</a>
+        </p>
+      </section>
+    </div>
+  </main>
+
+  <footer>
+    <p>© 2025 Daraz. All rights reserved.</p>
+  </footer>
+
+  <!-- Link to JS -->
+  <script src="script.js"></script>
 </body>
 </html>
